--- a/.docker/nginx/conf.d/php.conf
+++ b/.docker/nginx/conf.d/php.conf
@@ -5,6 +5,16 @@ server {
     # REWRIE RULES
     rewrite ^/api/(\d+)/(.*)$ /moj_subor.php?parameterCislo=$1&parameterVsetko=$2 last;
 
+    # redirect to login page curl
+    # rewrite ^/login/curl$ /auth/login.php?endpoint=curl last;
+    rewrite ^/login(.*)$ /auth/login.php?endpoint=$1 last;
+    rewrite ^/registration(.*)$ /registration.php?endpoint=$1 last;
+
+    rewrite ^/change-password/([^/]+)/([^/]+)$ /auth/change-password.php?endpoint=/$1&token=$2 last;
+    rewrite ^/change-password(.*)$ /auth/change-password.php?endpoint=$1 last;
+    
+
+
     location ~* \.php$ {
         fastcgi_pass   php:9000;
         include        fastcgi_params;
