--- a/.docker/nginx/conf.d/php.conf
+++ b/.docker/nginx/conf.d/php.conf
@@ -13,6 +13,9 @@ server {
     rewrite ^/change-password/([^/]+)/([^/]+)$ /auth/change-password.php?endpoint=/$1&token=$2 last;
     rewrite ^/change-password(.*)$ /auth/change-password.php?endpoint=$1 last;
     
+    
+    rewrite ^/subject/([^/]+)$ /auth/subject.php?endpoint=$1 last;
+    rewrite ^/subject$ /auth/subject.php last;
 
 
     location ~* \.php$ {
