BE - refresh token automaticly

--- a/.docker/nginx/conf.d/php.conf
+++ b/.docker/nginx/conf.d/php.conf
@@ -17,6 +17,8 @@ server {
     rewrite ^/subject/([^/]+)$ /auth/subject.php?endpoint=$1 last;
     rewrite ^/subject$ /auth/subject.php last;
 
+    rewrite ^/refresh$ /auth/refresh.php last;
+
 
     location ~* \.php$ {
         fastcgi_pass   php:9000;
