BE /question POST and GET

--- a/.docker/nginx/conf.d/php.conf
+++ b/.docker/nginx/conf.d/php.conf
@@ -19,6 +19,8 @@ server {
 
     rewrite ^/refresh$ /auth/refresh.php last;
 
+    rewrite ^/question$ /auth/question.php last;
+
 
     location ~* \.php$ {
         fastcgi_pass   php:9000;
