BE - DELETE /template_question, editet POST /login, + small bugs

--- a/.docker/nginx/conf.d/php.conf
+++ b/.docker/nginx/conf.d/php.conf
@@ -3,14 +3,11 @@ server {
     index  index.html;
 
     # REWRIE RULES
-    rewrite ^/api/(\d+)/(.*)$ /moj_subor.php?parameterCislo=$1&parameterVsetko=$2 last;
 
-    # redirect to login page curl
-    # rewrite ^/login/curl$ /auth/login.php?endpoint=curl last;
     rewrite ^/login(.*)$ /auth/login.php?endpoint=$1 last;
     rewrite ^/registration(.*)$ /registration.php?endpoint=$1 last;
 
-    rewrite ^/change-password/([^/]+)/([^/]+)$ /auth/change-password.php?endpoint=/$1&token=$2 last;
+    # rewrite ^/change-password/([^/]+)/([^/]+)$ /auth/change-password.php?endpoint=/$1&token=$2 last;
     rewrite ^/change-password(.*)$ /auth/change-password.php?endpoint=$1 last;
     
     
@@ -20,6 +17,8 @@ server {
     rewrite ^/refresh$ /auth/refresh.php last;
 
     rewrite ^/question$ /auth/question.php last;
+
+    rewrite ^/question/([^/]+)/([^/]+)$ /auth/question.php?endpoint1=/$1&endpoint2=$2 last;
 
 
     location ~* \.php$ {
