--- a/FE/package.json
+++ b/FE/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.2.0",
     "primeicons": "^7.0.0",
     "primevue": "^3.51.0",
+    "qrcode-vue3": "^1.6.8",
     "vue": "^3.4.21",
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.3.0"
