--- a/.docker/nginx/conf.d/php.conf
+++ b/.docker/nginx/conf.d/php.conf
@@ -22,9 +22,8 @@ server {
     rewrite ^/user$ /auth/user.php last;
     rewrite ^/user/([^/]+)$ /auth/user.php?endpoint1=$1 last;
 
-
-
-
+    ssl_certificate     /etc/nginx/certs/webte_fei_stuba_sk.pem;
+    ssl_certificate_key /etc/nginx/certs/webte.fei.stuba.sk.key;
 
     location ~* \.php$ {
         fastcgi_pass   php:9000;
@@ -32,5 +31,17 @@ server {
         fastcgi_index index.php;
         fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param  SCRIPT_NAME     $fastcgi_script_name;
+    }
+
+    location /wss {
+        proxy_pass http://php:9191;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location / {
+        autoindex on;
     }
 }
