--- a/BE/composer.json
+++ b/BE/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "phpmailer/phpmailer": "^6.9",
         "firebase/php-jwt": "^6.10",
-        "slim/http": "^1.3"
+        "slim/http": "^1.3",
+        "workerman/workerman": "^4.1"
     }
 }
