--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,21 +6,19 @@ services:
   nginx:
     image: nginx:1.18
     ports:
+      - 9191:9191
       - 5151:80
     volumes:
       - ./BE/:/var/www/html/
       - ./.docker/nginx/conf.d/php.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - php
+      - ./.docker/nginx/certs:/etc/nginx/certs
 
   # PHP Service
   php:
     build: ./.docker/php
     volumes:
       - ./BE/:/var/www/html/
-    depends_on:
-      mysql:
-        condition: service_healthy
+    command: sh -c "php ./wsserver.php start -d && php-fpm"
 
   # Vue.js 3
   vue:
@@ -37,9 +35,6 @@ services:
       - 5858:80
     environment:
       PMA_HOST: mysql
-    depends_on:
-      mysql:
-        condition: service_healthy
 
   # MySQL Service
   mysql:
@@ -53,10 +48,6 @@ services:
     volumes:
       - ./.docker/mysql/my.cnf:/etc/mysql/my.cnf
       - ./.database:/docker-entrypoint-initdb.d
-    healthcheck:
-      test: mysqladmin ping -h 127.0.0.1 -u root --password=$$MYSQL_ROOT_PASSWORD
-      interval: 5s
-      retries: 10
 
 # Volumes
 volumes:
