BE - fix wss problems in docker

--- a/.docker/nginx/conf.d/php.conf
+++ b/.docker/nginx/conf.d/php.conf
@@ -1,4 +1,9 @@
 server {
+    listen 80;
+    listen [::]:80;
+    listen 9191;
+    listen [::]:9191;
+    
     root   /var/www/html;
     index  index.html;
 
