--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -3,8 +3,8 @@ FROM php:8.3-fpm
 RUN docker-php-ext-install pdo_mysql mysqli pcntl
 RUN docker-php-ext-configure pcntl --enable-pcntl
 
-COPY /BE /var/www/node17.webte.fei.stuba.sk
-WORKDIR /var/www/node17.webte.fei.stuba.sk
+# COPY /BE /var/www/node17.webte.fei.stuba.sk
+# WORKDIR /var/www/node17.webte.fei.stuba.sk
 
-CMD [ "php", "./wsserver.php", "start", "-d" ]
-CMD ["php-fpm"]
+# CMD [ "php", "./wsserver.php", "start", "-d" ]
+# CMD ["php-fpm"]
