--- a/FE/package.json
+++ b/FE/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "chart.js": "^4.4.3",
     "crypto-js": "^4.2.0",
     "html2pdf.js": "^0.10.1",
     "primeicons": "^7.0.0",
