--- a/.docker/nginx/conf.d/php.conf
+++ b/.docker/nginx/conf.d/php.conf
@@ -22,6 +22,7 @@ server {
     rewrite ^/refresh$ /auth/refresh.php last;
 
     rewrite ^/question$ /auth/question.php last;
+    rewrite ^/question/([^/]+)$ /auth/question.php?endpoint1=/$1 last;
     rewrite ^/question/([^/]+)/([^/]+)$ /auth/question.php?endpoint1=/$1&endpoint2=$2 last;
 
     rewrite ^/user$ /auth/user.php last;
