Update to get vue paths urls

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
 
   # Vue.js 3
   vue:
+    volumes:
+      - ./.docker/nginx/conf.d/vue.conf:/etc/nginx/conf.d/vue.conf:r
     build:
       context: .
       dockerfile: ./.docker/vue/Dockerfile
